# Helios

./: .gitignore  AGENTS.md  AGENT_TASKS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  WORKPLAN.md  helios_proof.ipynb
bench/google_benchmark/: dense_cpu_bench.cpp  sparse_spmv_bench.cpp
bench/nvbench/: dense_cuda_bench.cu
docs/: COLAB.md  PUBLISHING.md
include/helios/: cli.h  cpu_kernels.h  dataset_loader.h  gpu_kernels.h  metrics.h  planner.h  profiler.h  runtime.h
scripts/: export_public_bundle.py  fetch_snap.sh  fetch_suitesparse.sh  live_proof_walkthrough.sh  render_proof_plots.py  repro_suite.sh  run_colab_proof.sh  setup_colab_cuda.sh
src/: main.cpp
src/cli/: cli.cpp
src/cpu/: cpu_kernels.cpp  cpu_kernels_avx2.cpp
src/gpu/: gpu_kernels.cu  gpu_kernels_stub.cpp
src/io/: dataset_loader.cpp
src/metrics/: metrics.cpp
src/planner/: planner.cpp
src/profiler/: profiler.cpp
src/runtime/: runtime.cpp
tests/: test_dataset_loader.cpp  test_runtime_commands.cpp
